Revision history for perl distribution Convos

6.21 Not Released
 - Add possibility to remove password protection in Conversation Settings
 - Add active conversation modes to Conversation Settings
 - Fix sending messages to participants in connection conversation
 - Fix setting password in conversation settings
 - Fix setting topic in conversation settings
 - Fix toggling notification in conversation settings
 - Fix bug where conversation modes could get reset
 - Fix bug where user modes could get reset

6.20 2021-05-25T10:03:00+0900
 - Add support for Github Webhooks, through the bot system
 - Compatible with Mojolicious::Plugin::Webpack 1.01
 - Bumped many JavaScript dependencies
 - Fix catching unhandled send_p() promises
 - Fix join/part actions for the bot plugin
 - Fix showing the correct copyright year
 - Fix showing the installed version when running "convos version"

6.19 2021-05-20T09:03:00+0900
 - Add support for quotes in the CMS

6.18 2021-05-20T07:30:00+0900
 - Changing defaults from freenode to https://libera.chat/
 - Changed sections toggle styling from checkbox to caret

6.17 2021-05-18T12:13:00+0900
 - Fix not enabling the client side router for CMS pages
 - Fix always rendering the same theme for the CMS pages
 - Add support for CONVOS_DEFAULT_THEME and CONVOS_DEFAULT_SCHEME environment variables

6.16 2021-05-18T11:03:00+0900
 - Add <SimpleField> for form fields without styling
 - Add "viewport" store, which replaces "nColumns" store
 - Add client side log utility for easier debugging
   * Can be toggled with "?_debug=root:trace,category:level"
 - Fix "removeConnectionProfile" operation in the API
 - Fix changing nick, realname, sasl, tls and tls_verify for forced connections
 - Fix changing source IP for connections
 - Fix constrast issues for "South" theme
 - Fix only loading emojis once
 - Fix only loading translations once
 - Fix rendering issue when switching between connection profiles and profile editor