@@ -3,9 +3,12 @@ import Button from './form/Button.svelte';
 import Checkbox from './form/Checkbox.svelte';
 import Icon from './Icon.svelte';
 import Link from './Link.svelte';
+import Operation from '../store/Operation';
+import OperationStatus from '../components/OperationStatus.svelte';
 import TextArea from '../components/form/TextArea.svelte';
 import TextField from '../components/form/TextField.svelte';
 import {activeMenu, viewport} from '../store/writable';
+import {channelModeCharToModeName, getChannelMode} from '../js/constants';
 import {createForm} from '../store/form';
 import {fly} from 'svelte/transition';
 import {getContext, onMount, tick} from 'svelte';
@@ -17,37 +20,63 @@ export let transition;
 
 const form = createForm({password: ''});
 const user = getContext('user');
+const saveConversationSettingsOp = new Operation({api: false, id: 'saveConversationSettings'});
 
-$: isOperator = $conversation.participants.me().modes.operator;
+const toggleModes = [
+  'invite_only',
+  'moderated',
+  'password',
+  'prevent_external_send',
+  'topic_protection',
+];
+
 $: participants = $conversation.participants;
+$: isPrivate = $conversation.is('private');
+$: isOperator = $participants.me().modes.operator;
 $: modes = Object.keys($conversation.modes).sort().filter(k => conversation.modes[k]);
 
 onMount(async () => {
   form.set({topic: conversation.topic, want_notifications: conversation.wantNotifications});
-  await new Promise(r => conversation.send('/mode', r));
+  if (Object.keys(conversation.modes).length == 0 && !isPrivate) await new Promise(r => conversation.send('/mode', r));
   await tick();
-  form.set({password_protected: conversation.modes.password || false});
+  const fields = {};
+  for (const mode of toggleModes) fields['mode_' + mode] = conversation.modes[mode] || false;
+  form.set(fields);
 });
 
 function partConversation() {
   conversation.send('/part', (res) => !res.errrors && ($activeMenu = ''));
 }
 
-function saveConversationSettings() {
+function saveChannelModes() {
+  const setModes = [];
+  for (const mode of toggleModes) {
+    const checked = form.get('mode_' + mode) || false;
+    if (mode == 'password' && checked) {
+      if (form.get('password')) conversation.send('/mode +k ' + form.get('password'));
+      form.set({password: ''});
+    }
+    else if (checked != (conversation.modes[mode] || false)) {
+      setModes.push((checked ? '+' : '-') + getChannelMode(mode));
+    }
+  }
+
+  return isOperator && setModes.length && conversation.send('/mode ' + setModes.join(''));
+}
+
+function saveChannelTopic() {
+  if (!isOperator && conversation.modes.topic_protection) return false;
+  return form.get('topic') != conversation.topic && conversation.send('/topic ' + form.get('topic'));
+}
+
+async function saveConversationSettings() {
+  saveConversationSettingsOp.update({status: 'loading'});
+  await saveConversationSettingsOp.on('update');
   conversation.update({wantNotifications: form.get('want_notifications') || false});
-
-  if (isOperator && !form.get('password_protected')) {
-    if (conversation.modes.password) conversation.send('/mode -k');
-  }
-  else if (form.get('password') && form.get('password_protected')) {
-    const password = form.get('password');
-    conversation.send(isOperator ? '/mode +k ' + password : '/join ' + conversation.name + ' ' + password);
-    form.set({password: ''});
-  }
-
-  if (isOperator && form.get('topic') != conversation.topic) {
-    conversation.send('/topic ' + form.get('topic'));
-  }
+  saveChannelModes();
+  saveChannelTopic();
+  await tick();
+  saveConversationSettingsOp.update({status: 'success'});
 }
 </script>
 
@@ -60,7 +89,7 @@ function saveConversationSettings() {
   <p>
     {#if conversation.frozen}
       {$l('Conversation with %1 is frozen. Reason: %2', conversation.name, $l(conversation.frozen))}
-    {:else if conversation.is('private')}
+    {:else if isPrivate}
       {$l('Private conversation with %1.', conversation.name)}
     {:else if isOperator}
       {$l('You are channel operator in %1.', conversation.name)}
@@ -70,27 +99,16 @@ function saveConversationSettings() {
   </p>
 
   <form method="post" on:submit|preventDefault="{saveConversationSettings}">
-    {#if !conversation.is('private')}
-      {#if isOperator}
+    {#if !isPrivate}
+      {#if isOperator || !$conversation.modes.topic_protection}
         <TextArea name="topic" form="{form}" placeholder="{$l('No topic is set.')}">
           <span slot="label">{$l('Topic')}</span>
         </TextArea>
-        <Checkbox name="password_protected" form="{form}">
-          <span slot="label">{$l('Protect conversation with a password')}</span>
-        </Checkbox>
-        {#if $form.password_protected}
-          <TextField type="password" name="password" form="{form}">
-            <span slot="label">{$l('Password')}</span>
-          </TextField>
-        {/if}
       {:else}
         <div class="text-field">
           <label for="nothing">{$l('Topic')}</label>
           <div class="input">{@html $lmd(conversation.topic || 'No topic is set.')}</div>
         </div>
-        <TextField type="password" name="password" form="{form}" readonly="{!conversation.is('locked')}">
-          <span slot="label">{$l('Password')}</span>
-        </TextField>
       {/if}
     {/if}
 
@@ -100,22 +118,32 @@ function saveConversationSettings() {
       </Checkbox>
     {/if}
 
+    {#if !isPrivate}
+      <nav class="sidebar-left__nav">
+        <h3>{$l('Conversation modes')}</h3>
+        {#each toggleModes as mode}
+          <Checkbox badge name="mode_{mode}" form="{form}" disabled="{!isOperator}">
+            <span slot="label">{$l(ucFirst(mode.replace(/_/g, ' ')))} <b class="badge">{$form['mode_' + mode] ? '+' : '-'}{getChannelMode(mode)}</b></span>
+          </Checkbox>
+          {#if mode == 'password' && $form.mode_password}
+            <TextField type="password" name="password" form="{form}">
+              <span slot="label">{$l('Password')}</span>
+            </TextField>
+          {/if}
+        {/each}
+
+        {#if !isOperator}
+          <p><i>{$l('Only operators can change modes.')}</i></p>
+        {/if}
+      </nav>
+    {/if}
+
     <div class="form-actions">
-      {#if !conversation.is('private')}
-        <Button icon="save"><span>{$l('Update')}</span></Button>
-      {/if}
+      <Button icon="save"><span>{$l('Update')}</span></Button>
       <Button type="button" on:click="{partConversation}" icon="sign-out-alt"><span>{$l('Leave')}</span></Button>
     </div>
+    <OperationStatus op="{saveConversationSettingsOp}"/>
   </form>
-
-  {#if modes.length}
-    <nav class="sidebar-left__nav">
-      <h3>{$l('Active modes')}</h3>
-      {#each modes as mode}
-        <div>{$l(ucFirst(mode.replace(/_/g, ' ')))}</div>
-      {/each}
-    </nav>
-  {/if}
 
   {#if !conversation.frozen && $viewport.nColumns < 3}
     <nav class="sidebar-left__nav">
