@@ -6,22 +6,30 @@ export const channelModeCharToModeName = {
   F: 'enable_forwarding',
   f: 'forward',
   g: 'free_invite',
+  i: 'invite_only',
   I: 'invite_exemption',
   j: 'join_throttle',
   k: 'password',
   l: 'join_limit',
   L: 'large_ban_list',
   m: 'moderated',
+  M: 'login_to_talk',
   n: 'prevent_external_send',
   P: 'permanent',
   p: 'privat',
   Q: 'block_forwarded_users',
   q: 'quiet',
   r: 'block_unidentified',
+  R: 'login_to_join',
   s: 'secret',
   S: 'secure_connection_only',
-  t: 'ops_topic',
+  t: 'topic_protection',
 };
+
+export function getChannelMode(mode) {
+  if (channelModeCharToModeName[mode]) return channelModeCharToModeName[mode];
+  return Object.keys(channelModeCharToModeName).filter(k => mode == channelModeCharToModeName[k])[0] || '';
+}
 
 export const modeMoniker = {
   a: '&',
